--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
     list-style: circle;
 }
 
-.header__menu-list .header__menu-item_active {
+.header__menu-list .menu-item_active {
     list-style: none;
 }
 
@@ -33,12 +33,8 @@
     font-weight: 400;
 }
 
-.header__menu-item_active menu-link {
+.header__menu-item_active .menu-link {
     text-decoration: none;
-}
-
-.menu-link {
-
 }
 
 .header__logo {
@@ -247,7 +243,7 @@
 
 .about__text {
     font-size: 20px;
-   
+    word-wrap: break-word;
 }
 
 .about__column-title {
@@ -260,4 +256,58 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 24px;
+}
+
+/* about footer */
+
+.footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 185px;
+    justify-content: space-between;
+    margin : 180px 26px 88px;
+}
+
+.footer .contacts {
+    justify-items: left;
+}
+
+.footer__menu {
+    height: 64px;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+}
+
+.footer__menu-list .menu-item_active {
+    text-decoration: none;
+}
+
+.footer__menu-item{
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.social__list {
+    display: flex;
+    width: 240px;
+    height: 48px;
+    justify-content: space-between;
+    gap: 48px;
+    list-style: none;
+}
+
+.social-link { 
+    display: block;
+    max-width: 48px;
+    max-height: 48px;
+}
+
+.social-picture {
+
+    object-fit: contain;
 }
