--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@
     position: relative;
     background-image: url("../images/cover.jpg");
     width: 100%;
-    height: 100%;
+    height: 757px;
     background-size: cover; /* Ensure the image covers the entire container */
     background-position: center; /* Center the image */
     padding: 1px 0;
@@ -77,7 +77,7 @@
   .cover__title {
     position: relative; /* Ensure the text is positioned above the overlay */
     color: #fff;
-    margin: 165px 50px;
+    margin: 165px 50px 135px;
     font-size: 100px;
     text-transform: uppercase;
     z-index: 1; /* Bring the text above the overlay */
@@ -145,7 +145,7 @@
     font-weight: 700;
     margin-left: 40px;
     margin-bottom: 27px;
-
+    text-transform: uppercase;
 }
 
 .lots__card-list {
