--- a/styles/style.css
+++ b/styles/style.css
@@ -214,6 +214,8 @@
     align-items: center;
     justify-items: center;
     margin: 146px 24px 0;
+    padding-top: 35px;
+    padding-left: 47px;
 }
 
 .about__logo {
